[package]
name = "uart16550"
description = "Provide definition of 16550 uart registers."
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/uart16550.git"
documentation = "https://docs.rs/uart16550"
license = "MulanPSL-2.0 OR MIT"
readme = "README.md"
keywords = ["uart"]
categories = ["embedded", "hardware-support", "no-std"]
